# slop

./: .gitignore  CLAUDE.md  Makefile  README.md  build_native.sh  build_native_py.sh  comprehensive.c  fizzbuzz-filled  fizzbuzz-filled.c  fizzbuzz-filled.slop  main  pyproject.toml  slop.toml.example  test_set_map_foreach.c
.github/workflows/: release.yml
bootstrap/: Makefile  generate_c.py  update_bootstrap.sh
bootstrap/checker/: slop_checker.c  slop_checker.h  slop_collect.c  slop_collect.h  slop_env.c  slop_env.h  slop_file.c  slop_file.h  slop_infer.c  slop_infer.h  slop_parser.c  slop_path.c  slop_resolve.c  slop_resolve.h  (+3 more)
examples/: fibonacci.c  fibonacci.slop  fizzbuzz.slop  foreach-test.slop  hello.slop  http-server.slop  math.slop  parse-debug.slop  petstore.json  rate-limiter.slop  scoped-ptr.slop  simple-test.slop  user-service-hybrid.slop
scripts/: build_native.sh  install.ps1  install.sh  package.ps1  package.sh  paren-balance.py  run_native_tests.sh
skill/: SKILL.md
spec/: HYBRID_PIPELINE.md  LANGUAGE.md  REFERENCE.md  VERIFICATION.md
tests/: test_arena_new_free.slop  test_foreach_expr.slop  test_hole_filler_types.py  test_lambda.slop  test_match_loops.slop  test_native_transpiler_issues.py  test_openapi_converter.py  test_parser.py  test_providers.py  test_set_map_foreach.slop  test_simple_closure.slop  test_transpiler.py  test_type_checker.py  test_typed_channel.slop  test_typed_map_keys.slop  test_verifier.py  test_with_arena_lambda.slop
tree-sitter-slop/: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  slop-ts-mode.el
(+284 files in other folders)
