[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slop-lang"
version = "0.1.0"
description = "SLOP - Symbolic LLM-Optimized Programming"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["slop", "llm", "transpiler", "c", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
]
dependencies = [
    "pyperclip>=1.11.0",
]

[project.scripts]
slop = "slop.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
yaml = ["pyyaml>=6.0"]
openapi = ["pyyaml>=6.0"]
verify = ["z3-solver>=4.12.0"]
all = ["pyyaml>=6.0", "z3-solver>=4.12.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/slop"]

[tool.hatch.build.targets.wheel.force-include]
"src/slop/runtime/slop_runtime.h" = "slop/runtime/slop_runtime.h"

[tool.hatch.build.targets.sdist]
include = [
    "src/slop",
    "examples",
    "spec",
    "LICENSE",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests", "lib"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
